Major update
- Upgrade to JDK 21 as minimum supported version
- Use latest TemplatedJDBC
- Rewrote identification and stream metadata extraction using virtual threads
- ContentPrint provisioning moves to StreamableService
- StreamMetaData is now part of Streamable as StreamableDescriptor
- Replaced synchronized blocks with locks in several places
- Rewrote PriorityRateLimiter to be virtual thread friendly (and simpler)